# yt_to_spotifyplaylist

./: .cache  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  README.md  __init__.py  __main__.py  cli.py  example_env.txt  main.py  mkdocs.yml  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  spotify_utils.py  test_matching.py  utils.py  yt_utils.py
.github/workflows/: ci.yml
FastAPI/: Dockerfile  main.py
docs/: index.md  usage.md
docs/api/: yt2spotify.md
front_end/: Dockerfile  README.md  docker-compose.yml
front_end/.github/: copilot-instructions.md
front_end/src/: App.tsx
front_end/src/components/: SpotifyCredentialsForm.tsx  SyncConfigForm.tsx  SyncLogSSE.tsx  SyncWizard.tsx
output/: added_songs.json  all_results.json  missing_on_spotify.json  private_deleted_songs.json
output/dryrun_temp/: added_songs.json  all_results.json  all_youtube_entries.json  dryrun_added.json  private_deleted_songs.json
tests/: __init__.py  conftest.py  test_cache.py  test_cache_extra.py  test_cli.py  test_cli_edge.py  test_cli_extra.py  test_cli_integration.py  test_cli_integration2.py  test_cli_main.py  test_cli_sync_command.py  test_core.py  test_core_async.py  test_core_extra.py  test_json_csv_validation.py  test_matching.py  test_matching_extra.py  test_matching_reasonable.py  test_matching_reasonable_extra.py  test_regression_table.py  test_spotify_utils.py  test_spotify_utils_extra.py  test_track_search_csv.py  test_utils.py  test_utils_extra.py  test_youtube.py  test_youtube_api.py  test_youtube_extra.py  test_yt_utils.py  test_yt_utils_extra.py  track_search_test_data.csv
yt2spotify/: __init__.py  __main__.py  cache.py  cli.py  core.py  default_config.toml  logging_config.py  matching.py  spotify_utils.py  utils.py  youtube.py  yt_utils.py
