[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yt2spotify"
version = "0.1.0"
description = "Sync YouTube playlists to Spotify playlists"
authors = [
    {name = "Your Name"}
]
dependencies = [
    "spotipy",
    "yt-dlp",
    "python-dotenv",
    "tqdm",
    "pytest",
    "pytest-cov",
    "rapidfuzz",
    "google-api-python-client",
    "toml",
    "pytest-asyncio"
]
requires-python = ">=3.8"
license = "MIT"

[project.scripts]
yt2spotify = "yt2spotify.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
addopts = "--cov=yt2spotify --cov-report=term-missing --cov-fail-under=80"

[project.optional-dependencies]
dev = [
    "rich",
    "pytest",
    "pytest-cov",
    "wheel",
    "setuptools>=68",
    "python-dotenv",
    "tqdm",
    "yt-dlp",
    "spotipy",
    "rapidfuzz",
    "google-api-python-client",
    "toml",
    "pytest-asyncio"
]
