[metadata]
name = yt2spotify
version = 0.1.0
description = Sync YouTube playlists to Spotify playlists
author = Your Name

[options]
packages = find:
install_requires =
    spotipy
    yt-dlp
    python-dotenv
    tqdm
    aiohttp
    pytest
    rapidfuzz
python_requires = >=3.8

[options.entry_points]
console_scripts =
    yt2spotify = yt2spotify.cli:main
